fixed letter-spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -147,7 +147,7 @@ img {
 
   font-size: 14px;
   line-height: 1.71;
-  letter-spacing: 0.03px;
+  letter-spacing: 0.03em;
 }
 /* what we do section styles */
 .what-we-do-section {
